Visual corrections and sound init

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /[Aa]ssets/[Tt]hirdparty/
 /[Aa]ssets/[Tt]extMesh Pro/
 /[Aa]ssets/[Aa]rt/
+/[Aa]ssets/[Aa]udio/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
